static/psi4manual/1.1.0/_sources/autodir_psivariables/module__fisapt.rst.txt
.. _`apdx:fisapt_psivar`:


FISAPT
======

.. hlist::
   :columns: 1

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`SAPT DISP ENERGY <SAPTDISPENERGY>`

   * :psivar:`SAPT ELST ENERGY <SAPTELSTENERGY>`

   * :psivar:`SAPT EXCH ENERGY <SAPTEXCHENERGY>`

   * :psivar:`SAPT HF(2) ENERGY A(0) <SAPTHF(2)ENERGYA(0)>`

   * :psivar:`SAPT HF(2) ENERGY A(HF) <SAPTHF(2)ENERGYA(HF)>`

   * :psivar:`SAPT HF(2) ENERGY AB(HF) <SAPTHF(2)ENERGYAB(HF)>`

   * :psivar:`SAPT HF(2) ENERGY ABC(HF) <SAPTHF(2)ENERGYABC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY AC(0) <SAPTHF(2)ENERGYAC(0)>`

   * :psivar:`SAPT HF(2) ENERGY AC(HF) <SAPTHF(2)ENERGYAC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY B(0) <SAPTHF(2)ENERGYB(0)>`

   * :psivar:`SAPT HF(2) ENERGY B(HF) <SAPTHF(2)ENERGYB(HF)>`

   * :psivar:`SAPT HF(2) ENERGY BC(0) <SAPTHF(2)ENERGYBC(0)>`

   * :psivar:`SAPT HF(2) ENERGY BC(HF) <SAPTHF(2)ENERGYBC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY C <SAPTHF(2)ENERGYC>`

   * :psivar:`SAPT HF(2) ENERGY HF <SAPTHF(2)ENERGYHF>`

   * :psivar:`SAPT IND ENERGY <SAPTINDENERGY>`

   * :psivar:`SAPT TOTAL ENERGY <SAPTTOTALENERGY>`

   * :psivar:`SAPT0 TOTAL ENERGY <SAPT0TOTALENERGY>`


