static/psi4manual/1.3.2/_sources/autodir_psivariables/module__fisapt.rst.txt
.. _`apdx:fisapt_psivar`:


FISAPT
======

.. hlist::
   :columns: 1

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`SAPT DISP ENERGY <SAPTDISPENERGY>`

   * :psivar:`SAPT DISP20 ENERGY <SAPTDISP20ENERGY>`

   * :psivar:`SAPT ELST ENERGY <SAPTELSTENERGY>`

   * :psivar:`SAPT ELST10,R ENERGY <SAPTELST10,RENERGY>`

   * :psivar:`SAPT EXCH ENERGY <SAPTEXCHENERGY>`

   * :psivar:`SAPT EXCH-DISP20 ENERGY <SAPTEXCH-DISP20ENERGY>`

   * :psivar:`SAPT EXCH-IND20,R ENERGY <SAPTEXCH-IND20,RENERGY>`

   * :psivar:`SAPT EXCH-IND20,U ENERGY <SAPTEXCH-IND20,UENERGY>`

   * :psivar:`SAPT EXCH10 ENERGY <SAPTEXCH10ENERGY>`

   * :psivar:`SAPT EXCH10(S^2) ENERGY <SAPTEXCH10(S^2)ENERGY>`

   * :psivar:`SAPT HF(2) ENERGY A(0) <SAPTHF(2)ENERGYA(0)>`

   * :psivar:`SAPT HF(2) ENERGY A(HF) <SAPTHF(2)ENERGYA(HF)>`

   * :psivar:`SAPT HF(2) ENERGY AB(HF) <SAPTHF(2)ENERGYAB(HF)>`

   * :psivar:`SAPT HF(2) ENERGY ABC(HF) <SAPTHF(2)ENERGYABC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY AC(0) <SAPTHF(2)ENERGYAC(0)>`

   * :psivar:`SAPT HF(2) ENERGY AC(HF) <SAPTHF(2)ENERGYAC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY B(0) <SAPTHF(2)ENERGYB(0)>`

   * :psivar:`SAPT HF(2) ENERGY B(HF) <SAPTHF(2)ENERGYB(HF)>`

   * :psivar:`SAPT HF(2) ENERGY BC(0) <SAPTHF(2)ENERGYBC(0)>`

   * :psivar:`SAPT HF(2) ENERGY BC(HF) <SAPTHF(2)ENERGYBC(HF)>`

   * :psivar:`SAPT HF(2) ENERGY C <SAPTHF(2)ENERGYC>`

   * :psivar:`SAPT HF(2) ENERGY HF <SAPTHF(2)ENERGYHF>`

   * :psivar:`SAPT IND ENERGY <SAPTINDENERGY>`

   * :psivar:`SAPT IND20,R ENERGY <SAPTIND20,RENERGY>`

   * :psivar:`SAPT IND20,U ENERGY <SAPTIND20,UENERGY>`

   * :psivar:`SAPT TOTAL ENERGY <SAPTTOTALENERGY>`

   * :psivar:`SAPT0 TOTAL ENERGY <SAPT0TOTALENERGY>`


